# SpecialEqual

./: CMakeLists.txt
tristate/: main.cpp
tristate/tests/: tristate_test.cpp
